// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderActionPrompt > should render action prompt with placeholder 1`] = `
"<div class="action-prompt" role="region" aria-label="Section interaction" id="action-prompt-experience" data-section-id="experience">
      <button class="button prompt-button" aria-label="Submit prompt" data-default-text="Read next: Experience" data-section-id="experience">Read next: Experience</button>
    </div>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderLoader > should render loader component 1`] = `
"<div class="loader" role="status" aria-live="polite">
      <div class="loader-spinner"></div>
    </div>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderNavigationItem > should render navigation item with emoji icon 1`] = `
"<a href="#section-projects" class="nav-item" data-section-id="projects" role="menuitem" aria-label="Navigate to Projects" data-tooltip="Projects">
      <span class="nav-icon" aria-hidden="true">📁</span>
      <span class="nav-title" data-text="Projects"></span>
    </a>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderNavigationItem > should render navigation item with fallback icon 1`] = `
"<a href="#section-contact" class="nav-item" data-section-id="contact" role="menuitem" aria-label="Navigate to Contact" data-tooltip="Contact">
      <span class="nav-icon" aria-hidden="true">📄</span>
      <span class="nav-title" data-text="Contact"></span>
    </a>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderPersonalizationModal > should render personalization modal with glass effect 1`] = `
"<div class="modal-overlay modal-overlay--glass" role="dialog" aria-modal="true" aria-labelledby="personalization-title">
      <div class="modal-content modal-content--personalization">
        <h2 id="personalization-title" class="modal-title">Welcome! Let's personalize your experience</h2>

        <div class="personalization-form">
          <div class="form-group">
            <label for="user-name-input" class="form-label">What's your name?</label>
            <input type="text" id="user-name-input" class="form-input" placeholder="Enter your name" maxlength="50" required="" aria-required="true">
          </div>

          <div class="form-group">
            <p class="form-label">I'm a...</p>
            <div class="role-buttons" role="radiogroup" aria-label="Select your role">
              <button class="role-button" data-role="recruiter" role="radio" aria-checked="false">
                <span class="role-icon" aria-hidden="true">💼</span>
                <span class="role-label">Recruiter</span>
              </button>
              <button class="role-button" data-role="developer" role="radio" aria-checked="false">
                <span class="role-icon" aria-hidden="true">💻</span>
                <span class="role-label">Developer</span>
              </button>
              <button class="role-button" data-role="friend" role="radio" aria-checked="false">
                <span class="role-icon" aria-hidden="true">👋</span>
                <span class="role-label">Friend</span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderRoleChangeModal > should render role change modal with developer role disabled 1`] = `
"<div class="modal-overlay" role="dialog" aria-modal="true" aria-labelledby="role-change-title">
      <div class="modal-content modal-content--role-change">
        <button class="modal-close" aria-label="Close modal">
          <span aria-hidden="true">×</span>
        </button>

        <h2 id="role-change-title" class="modal-title">Change Your Role</h2>
        <p class="modal-description">Select a different perspective to see personalized content</p>

        <div class="hero-roles-grid">
          <button class="button button--recruiter" data-role="recruiter">
            <p class="button__description">
              I'll focus on reliability, estimations, and delivery.
            </p>
            <div class="button__content">
              <div class="button__icon button__icon--blue">
                <span>💼</span>
              </div>
              <span class="button__title">I am Recruiter</span>
            </div>
          </button>

          <button class="button button--developer" data-role="developer" disabled="" style="opacity: 0.5; cursor: not-allowed; pointer-events: none;">
            <p class="button__description">
              I'll dive into the tech stack, architecture, and tools.
            </p>
            <div class="button__content">
              <div class="button__icon button__icon--indigo">
                <span>💻</span>
              </div>
              <span class="button__title">I am Developer</span>
            </div>
          </button>

          <button class="button button--friend" data-role="friend">
            <p class="button__description">
              I'll introduce the human side of my work.
            </p>
            <div class="button__content">
              <div class="button__icon button__icon--teal">
                <span>👋</span>
              </div>
              <span class="button__title">I am Friend</span>
            </div>
          </button>
        </div>
      </div>
    </div>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderRoleChangeModal > should render role change modal with friend role disabled 1`] = `
"<div class="modal-overlay" role="dialog" aria-modal="true" aria-labelledby="role-change-title">
      <div class="modal-content modal-content--role-change">
        <button class="modal-close" aria-label="Close modal">
          <span aria-hidden="true">×</span>
        </button>

        <h2 id="role-change-title" class="modal-title">Change Your Role</h2>
        <p class="modal-description">Select a different perspective to see personalized content</p>

        <div class="hero-roles-grid">
          <button class="button button--recruiter" data-role="recruiter">
            <p class="button__description">
              I'll focus on reliability, estimations, and delivery.
            </p>
            <div class="button__content">
              <div class="button__icon button__icon--blue">
                <span>💼</span>
              </div>
              <span class="button__title">I am Recruiter</span>
            </div>
          </button>

          <button class="button button--developer" data-role="developer">
            <p class="button__description">
              I'll dive into the tech stack, architecture, and tools.
            </p>
            <div class="button__content">
              <div class="button__icon button__icon--indigo">
                <span>💻</span>
              </div>
              <span class="button__title">I am Developer</span>
            </div>
          </button>

          <button class="button button--friend" data-role="friend" disabled="" style="opacity: 0.5; cursor: not-allowed; pointer-events: none;">
            <p class="button__description">
              I'll introduce the human side of my work.
            </p>
            <div class="button__content">
              <div class="button__icon button__icon--teal">
                <span>👋</span>
              </div>
              <span class="button__title">I am Friend</span>
            </div>
          </button>
        </div>
      </div>
    </div>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderRoleChangeModal > should render role change modal with recruiter role disabled 1`] = `
"<div class="modal-overlay" role="dialog" aria-modal="true" aria-labelledby="role-change-title">
      <div class="modal-content modal-content--role-change">
        <button class="modal-close" aria-label="Close modal">
          <span aria-hidden="true">×</span>
        </button>

        <h2 id="role-change-title" class="modal-title">Change Your Role</h2>
        <p class="modal-description">Select a different perspective to see personalized content</p>

        <div class="hero-roles-grid">
          <button class="button button--recruiter" data-role="recruiter" disabled="" style="opacity: 0.5; cursor: not-allowed; pointer-events: none;">
            <p class="button__description">
              I'll focus on reliability, estimations, and delivery.
            </p>
            <div class="button__content">
              <div class="button__icon button__icon--blue">
                <span>💼</span>
              </div>
              <span class="button__title">I am Recruiter</span>
            </div>
          </button>

          <button class="button button--developer" data-role="developer">
            <p class="button__description">
              I'll dive into the tech stack, architecture, and tools.
            </p>
            <div class="button__content">
              <div class="button__icon button__icon--indigo">
                <span>💻</span>
              </div>
              <span class="button__title">I am Developer</span>
            </div>
          </button>

          <button class="button button--friend" data-role="friend">
            <p class="button__description">
              I'll introduce the human side of my work.
            </p>
            <div class="button__content">
              <div class="button__icon button__icon--teal">
                <span>👋</span>
              </div>
              <span class="button__title">I am Friend</span>
            </div>
          </button>
        </div>
      </div>
    </div>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderSection > should render section with custom query 1`] = `
"<section class="content-section" id="section-skills" data-section-id="skills" style="justify-content: center;">
      <div class="parallax-layer" aria-hidden="true"></div>

      <div class="section-layout zig-zag-left">
        <div class="section-visual">
          <div class="section-visual-container">
            <!-- Image will be inserted here -->
          </div>
        </div>
        <div class="section-body">
          <div class="section-header">
            <h2 class="section-title">Skills</h2>
            <p class="section-query" style="display: block;">"What are your top 3 programming languages?"</p>
          </div>
          <div class="section-body-content" data-text="Here are my technical skills and expertise.">
            <!-- Text content will be inserted here -->
          </div>
        </div>
      </div>
    </section>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderSection > should render section with zig-zag-left layout 1`] = `
"<section class="content-section" id="section-hero" data-section-id="hero" style="justify-content: center;">
      <div class="parallax-layer" aria-hidden="true"></div>

      <div class="section-layout zig-zag-left">
        <div class="section-visual">
          <div class="section-visual-container">
            <!-- Image will be inserted here -->
          </div>
        </div>
        <div class="section-body">
          <div class="section-header">
            <h2 class="section-title">Welcome</h2>
            <p class="section-query" style="display: none;"></p>
          </div>
          <div class="section-body-content" data-text="This is the hero section with some introductory text.">
            <!-- Text content will be inserted here -->
          </div>
        </div>
      </div>
    </section>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderSection > should render section with zig-zag-right layout 1`] = `
"<section class="content-section" id="section-about" data-section-id="about" style="justify-content: center;">
      <div class="parallax-layer" aria-hidden="true"></div>

      <div class="section-layout zig-zag-right">
        <div class="section-visual">
          <div class="section-visual-container">
            <!-- Image will be inserted here -->
          </div>
        </div>
        <div class="section-body">
          <div class="section-header">
            <h2 class="section-title">About Me</h2>
            <p class="section-query" style="display: none;"></p>
          </div>
          <div class="section-body-content" data-text="Learn more about my background and experience.">
            <!-- Text content will be inserted here -->
          </div>
        </div>
      </div>
    </section>"
`;

exports[`TemplateBuilder - Snapshot Tests with Real Templates > renderTypingIndicator > should return existing typing indicator from DOM 1`] = `
"<div id="typing-indicator" class="typing-indicator" role="status" aria-live="polite" style="display: none;">
      <span class="typing-dot"></span>
      <span class="typing-dot"></span>
      <span class="typing-dot"></span>
      <span class="typing-text">Generating content...</span>
    </div>"
`;
